--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "file-saver": "^2.0.5",
     "jquery": "^3.7.1",
     "ngx-pagination": "^6.0.3",
+    "ngx-socket-io": "^4.8.2",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.15.2",
     "tslib": "^2.3.0",
